--- a/EarBioAndroidApp/AndroidManifest.xml
+++ b/EarBioAndroidApp/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cdd.detection"
+          package="com.cdd.soton"
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="17"/>
@@ -10,9 +10,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <application android:label="@string/app_name"
-                 android:name=".EarApplication"
+                 android:name="com.cdd.soton.EarApplication"
                  android:icon="@drawable/ear_icon">
-        <activity android:name=".EntranceActivity"
+        <activity android:name="com.cdd.soton.EntranceActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                 >
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".detect.ShootActivity"
+        <activity android:name="com.cdd.soton.detect.ShootActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
